# dqlite-utils

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  dqlite-internal.h  renovate.json  rust-toolchain.toml
.github/actions/cargo-lint/: action.yml
.github/actions/cargo-test/: action.yml
.github/kb/: AGENTS.md
.github/workflows/: build-and-test.yml  debian-package.yml  packages.yml
crates/dqlite/: Cargo.toml  build.rs
crates/dqlite/src/: lib.rs  vfs.rs
crates/dqlite_utils/: Cargo.toml  dqlite-internal.h
crates/dqlite_utils/src/: raft.rs
crates/dqlite_utils/src/kb/: AGENTS.md
crates/dqlite_utils_cli/: Cargo.toml
crates/dqlite_utils_cli/src/: args.rs  interactive_reader.rs  main.rs  prompt.rs
crates/dqlite_utils_cli/src/command/: config.rs  log.rs  mod.rs  quit.rs
crates/dqlite_utils_cli/src/command/kb/: AGENTS.md
crates/dqlite_utils_cli/src/command/open/: mod.rs  vfs.rs
crates/dqlite_utils_cli/src/command/snapshot/: add_server.rs  finish.rs  info.rs  mod.rs  set_index.rs
crates/dqlite_utils_cli/src/kb/: AGENTS.md
crates/dqlite_utils_rusqlite_ext/: Cargo.toml
crates/dqlite_utils_rusqlite_ext/src/: config.rs  file_control.rs  files.rs  lib.rs
crates/dqlite_utils_rusqlite_ext/src/kb/: AGENTS.md
crates/rusqlite_ext/: Cargo.toml
crates/rusqlite_ext/src/: file_control.rs  lib.rs  vfs.rs
debian/: changelog  control  copyright  rules
debian/source/: options
demo/: README.md  backup.sqlite  payload1.txt  payload2.txt  payload3.txt  targets.txt
kb/: AGENTS.md
snap/: snapcraft.yaml
snap/kb/: AGENTS.md
src/: args.rs  crc32.rs  dir.rs  dqlite.rs  dqlite_sys.rs  info.rs  interactive_reader.rs  lib.rs  main.rs  pager.rs  prompt.rs  raft.rs  runner.rs  sys.rs  utils.rs  vfs.rs
src/command/: config.rs  help.rs  log.rs  mod.rs  quit.rs  sql.rs  status.rs
src/command/kb/: AGENTS.md
src/command/open/: close.rs  databases.rs  index.rs  mod.rs  vfs.rs
src/command/snapshot/: abort.rs  add_server.rs  finish.rs  info.rs  mod.rs  set_index.rs  set_self.rs  set_term.rs  set_timestamp.rs
src/command/sql/: dialect.rs  mod.rs
src/dqlite/: mod.rs  sys.rs
src/dqlite/kb/: AGENTS.md
src/kb/: AGENTS.md
src/rusqlite_ext/: config.rs  file_control.rs  files.rs  mod.rs  vfs.rs
