[workspace]
members = ["crates/*", "."]

[package]
name = "dqlite_utils"
version = "0.1.0"
rust-version = "1.91"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bitflags = "2.10.0"
clap = { version = "4.5.48", features = ["color", "derive", "wrap_help"] }
dqlite = { path = "crates/dqlite" }
fallible-iterator = "0.3.0"
home = "0.5.11"
indoc = "2.0.7"
libsqlite3-sys = { git = "https://github.com/rusqlite/rusqlite", rev = "890be7bab5a8cef767b2c373ae14b19959c4f3de" }
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
rand = "0.9.2"
regex = "1.12.2"
rusqlite = { git = "https://github.com/rusqlite/rusqlite", rev = "890be7bab5a8cef767b2c373ae14b19959c4f3de", features = ["bundled-full"] }
rusqlite_ext = { path = "crates/rusqlite_ext" }
rustyline = "17.0.2"
shell-words = "1.1.0"
sqlparser = "0.60.0"
static_assertions = "1.1.0"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "parsing"] }

[[bin]]
name = "dqlite-utils"
path = "src/main.rs"

[dev-dependencies]
googletest = "0.14.2"
tempfile = "3.23.0"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
debug = false
