[package]
name = "dqlite_utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[workspace]
members = ["crates/dqlite_utils_cli"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.91"

[workspace.dependencies]
anyhow = "1.0.100"
indoc = "2.0.7"
libsqlite3-sys = { git = "https://github.com/rusqlite/rusqlite", rev = "bb6943504439406a69950f58a1036ad79f17de94" }
rusqlite = { git = "https://github.com/rusqlite/rusqlite", rev = "bb6943504439406a69950f58a1036ad79f17de94", features = ["bundled-full"] }
thiserror = "2.0.17"
tempfile = "3.23.0"

[dependencies]
anyhow.workspace = true
indoc.workspace = true
libsqlite3-sys.workspace = true
lz4_flex = "0.13.0"
rusqlite.workspace = true
static_assertions = "1.1.0"
thiserror.workspace = true

[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3.32"

[dev-dependencies]
tempfile = { workspace = true }

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
debug = false
