[package]
name = "dqlite-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[workspace]
members = ["crates/dqlite_utils", "crates/dqlite_utils_rusqlite_ext"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.91"

[workspace.dependencies]
anyhow = "1.0.100"
indoc = "2.0.7"
libsqlite3-sys = { git = "https://github.com/rusqlite/rusqlite", rev = "bb6943504439406a69950f58a1036ad79f17de94" }
rusqlite = { git = "https://github.com/rusqlite/rusqlite", rev = "bb6943504439406a69950f58a1036ad79f17de94", features = ["bundled-full"] }
thiserror = "2.0.17"
tempfile = "3.23.0"

[dependencies]
dqlite_utils = { path = "crates/dqlite_utils" }
dqlite_utils_rusqlite_ext = { path = "crates/dqlite_utils_rusqlite_ext" }
anyhow.workspace = true
clap = { version = "4.5.48", features = ["color", "derive", "wrap_help"] }
fallible-iterator = "0.3.0"
home = "0.5.11"
indoc.workspace = true
libsqlite3-sys.workspace = true
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
regex = "1.12.2"
rusqlite.workspace = true
rustyline = "18.0.0"
shell-words = "1.1.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror.workspace = true
time = { version = "0.3.44", features = ["formatting", "parsing"] }

[dev-dependencies]
googletest = "0.14.2"
tempfile.workspace = true

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
debug = false
